--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,9 @@ name = "pypi"
 
 [packages]
 pytelegrambotapi = "*"
+flask = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
